# semantic-memory-bpmn

./: .env.example  README.md  pyproject.toml
bpmn_memory/: __init__.py  config.py  core.py  extractors.py  schemas.py
examples/: bpmn_example.py
